# lg

./: Lg.hs  Lg.lhs  Makefile  README.md  lg.cabal  package.yaml
