name:                lg
version:             0.0.0.0
-- synopsis:
-- description:
license:             Apache-2.0
license-file:        LICENSE
author:              Eric Rochester
maintainer:          erochest@gmail.com
copyright:           2016 Eric Rochester
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable lg
  main-is:             Lg.lhs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.8 && <5
                     , errors
                     , text
                     , text-format
                     , optparse-applicative
                     , optparse-text
  hs-source-dirs:      .
  ghc-options:         -threaded
                       -rtsopts
                       "-with-rtsopts=-N"
                       -- -fprof-auto "-with-rtsopts=-N -p -s -h -i0.1"
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/erochest/lg