name:                lg
version:             0.0.0.0
synopsis:            work log
description:         A utility to keep a work log.
license:             Apache-2.0
license-file:        LICENSE
author:              Eric Rochester
maintainer:          erochest@gmail.com
copyright:           2016 Eric Rochester
category:            Utility
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable lg
  main-is:             Lg.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.8 && <5
                     , aeson
                     , bytestring
                     , directory
                     , errors
                     , filepath
                     , optparse-applicative
                     , optparse-text
                     , text
                     , text-format
                     , time
  hs-source-dirs:      .
  ghc-options:         -threaded
                       -rtsopts
                       "-with-rtsopts=-N"
                       -- -fprof-auto "-with-rtsopts=-N -p -s -h -i0.1"
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/erochest/lg
